test/pass/cast_number_bool.j
class A {
  Void main() {
    return false || !(5);
  }
}
