test/fail/int_atom_string.j
class A {
    Void main() { return "aaaaaaaaaaaaaa" + i + 5; }
}
